@@ -689,13 +689,15 @@ DataGear版本更新日志
 -----------------------------------------
 
 新增：内置图表新增得分环、阶段仪表盘；
-新增：图表监听器新增destroy、onDestroy函数，用于处理图表销毁事件；
+新增：图表监听器新增destroy()、onDestroy()函数，用于处理图表销毁事件；
 新增：看板元素属性新增"dg-dashboard-unimport"，用于排除引入内置看板资源；
-新增：SQL数据集、数据管理查询条件、数据导入/导出、SQL工作台新增SQL防注入配置，增强系统安全性；
+新增：数据管理查询条件、数据导入/导出、SQL工作台新增SQL防注入配置，增强系统安全性；
+新增：SQL数据集新增SQL防注入配置，增强系统安全性；
 新增：登录需填写验证码，并限制登录尝试次数，增强系统安全性；
 新增：注册需填写验证码，增强系统安全性；
 修复：修复数据导出SQL会添加多余标识符引号的BUG；
 修复：修复在数据表查询页面打开的导出页面中点击【确定】按钮后会导致父页面自动刷新的BUG；
 改进：看板支持以"../global/*"的方式引入全局资源，便于浏览器跨看板缓存全局资源；
+改进：看板JS对象的loadUnsolvedCharts()函数支持指定查找根元素；
 改进：内置折线图、柱图、嵌套饼图、散点图新增【类别】数据标记，便于绘制单数据集多系列图表；
 改进：内置箱形图、主题河流图、象形柱图新增【类别】数据标记，便于绘制单数据集多系列图表；
